profile pic and background changes

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                       About Me
                   </h1>
                   <hr>
-                  <img id="car" class="float-md-start img-fluid" src="https://images.pexels.com/photos/733745/pexels-photo-733745.jpeg?auto=compress&cs=tinysrgb&dpr=2&w=250" alt="Dodge Charger">
+                  <img id="profilePic" class="float-md-start img-fluid" src="Profile_Pic.jpg" alt="Man in Rockies jersey">
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Autem quas reprehenderit voluptatum vitae velit aliquam, nostrum iste rerum rem, consectetur explicabo deleniti. Delectus assumenda similique tempora optio? Totam vero modi, quae iste maxime eaque ratione inventore, suscipit adipisci culpa explicabo quia recusandae quisquam alias asperiores eveniet magnam ullam. Id, quisquam?</p>
 
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Labore, iusto tempore dolore numquam fugiat odio a commodi architecto adipisci sint assumenda aliquam similique culpa voluptates, itaque eligendi. Itaque vitae ducimus quas fugit ullam eos labore molestias repellat eaque laudantium. Mollitia labore porro ipsa eligendi delectus quam perspiciatis accusantium veritatis rem.
