--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact</title>
+    <title>Contact Dante</title>
     <link rel="stylesheet" href="reset.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
@@ -67,6 +67,15 @@
             </div>
         </div>
     </div>
+
+
 </body>
+
+<footer class="navbar fixed-bottom navbar-dark bg-light">
+    <div class="container-fluid">
+      <a class="navbar-brand2" href="#">Footer</a>
+    </div>
+</footer>
+
 
 </html>
