--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Information</title>
+    <title>Dante's Information</title>
 
     <link rel="stylesheet" href="css.reset">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://getbootstrap.com/docs/5.0/examples/sticky-footer/">
     <link rel="stylesheet" href="style.css ">
 </head>
 <body>
@@ -33,24 +34,30 @@
         </div>
       </nav>
 
-      <br>
+      <br> 
 
-      <div class="container">
+      <main class="container">
           <div class="row">
               <div id= "about" class="col-sm-12 col-md-8 col-lg-8">
                   <h1>
                       About Me
                   </h1>
                   <hr>
-                  <img id="profilePic" class="float-md-start img-fluid" src="Profile_Pic.jpg" alt="Man in Rockies jersey">
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Autem quas reprehenderit voluptatum vitae velit aliquam, nostrum iste rerum rem, consectetur explicabo deleniti. Delectus assumenda similique tempora optio? Totam vero modi, quae iste maxime eaque ratione inventore, suscipit adipisci culpa explicabo quia recusandae quisquam alias asperiores eveniet magnam ullam. Id, quisquam?</p>
-
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Labore, iusto tempore dolore numquam fugiat odio a commodi architecto adipisci sint assumenda aliquam similique culpa voluptates, itaque eligendi. Itaque vitae ducimus quas fugit ullam eos labore molestias repellat eaque laudantium. Mollitia labore porro ipsa eligendi delectus quam perspiciatis accusantium veritatis rem.
-                
+                  <img id="Profile_Pic" class="float-md-start float-sm-start img-fluid" src="Profile_Pic.jpg" alt="Man in Rockies Jersey">
+                <p>Hello All! There is a lot when it comes to getting to know me, but with that being said I'll do my best to summarize. I have lived in a few different states throughout the west coast of the country but I was born and raised in Denver CO. I went to East High School in the heart of the city, not too far from downtown and the capitol building. I've always loved the area, so much so I bought a condo in the Cap Hill area of Denver about 8 months ago. After I finished high school I had my first attempt at college in Fort Collins at Colorado State University. Turns out it wasn't for me. But I did find a passion for MMA and cage fighting. From there that passion took me to Portland OR, and then ultimately Las Vegas as I made it on to different teams. I had the pleasure of training with many notable fighters, including Matt Lindland, Randy Couture, Ray Sefo, and Misha Tate (Misha actually gave me a bloody nose for hitting her too hard). From there I found myself moving back to Denver. After a few years of odd jobs and customer serivce jobs I worked my way up to being an interim Vice President of sales for Transamerica Life Insurance company. Long story short, I loved the culture, hated the job. After leaving that job I found this bootcamp and decided to follow another of my passions for coding. 
                 </p>
+
               </div>
           </div>
-      </div>
+      </main>
     
 </body>
+
+<footer class="navbar fixed-bottom navbar-dark bg-light">
+    <div class="container-fluid">
+      <a class="navbar-brand2" href="#">Dante James is the BEST!</a>
+    </div>
+</footer>
+
+
 </html>
