--- a/portfolio.html
+++ b/portfolio.html
@@ -45,32 +45,39 @@
                   <hr>
                   <div class="row">
                       <div class="col-sm-12 col-md-6 mt-2">
-                        <a href="https://placeholder.com"><img src="https://via.placeholder.com/350"></a>
+                        <a href="https://placeholder.com"><img class="img-fluid" src="https://via.placeholder.com/350"></a>
  
                       </div>
                       <div class="col-sm-12 col-md-6 mt-2">
-                        <a href="https://placeholder.com"><img src="https://via.placeholder.com/350"></a>
+                        <a href="https://placeholder.com"><img class="img-fluid" src="https://via.placeholder.com/350"></a>
 
                       </div>
                   </div>
                   <div class="row">
                       <div class="col-sm-12 col-md-6 mt-2">
-                        <a href="https://placeholder.com"><img src="https://via.placeholder.com/350"></a>
+                        <a href="https://placeholder.com"><img class="img-fluid" src="https://via.placeholder.com/350"></a>
  
                       </div>
                       <div class="col-sm-12 col-md-6 mt-2">
-                        <a href="https://placeholder.com"><img src="https://via.placeholder.com/350"></a>
+                        <a href="https://placeholder.com"><img class="img-fluid" src="https://via.placeholder.com/350"></a>
 
                       </div>
                   </div>
                   <div class="row">
-                    <div class="col-sm-12 col-md-6 mt-2">
-                      <a href="https://placeholder.com"><img src="https://via.placeholder.com/350"></a>
+                    <div class="col-sm-12 col-md-8 mt-2">
+                      <a href="https://placeholder.com"><img class="img-fluid" src="https://via.placeholder.com/350"></a>
                 
 
               </div>
           </div>
       </div>
+
     
 </body>
+
+<footer class="navbar fixed-bottom navbar-dark bg-light">
+  <div class="container-fluid">
+    <a class="navbar-brand2" href="#">Footer</a>
+  </div>
+</footer>
 </html>
