--- a/portfolio.html
+++ b/portfolio.html
@@ -45,17 +45,20 @@
                   <hr>
                   <div class="row">
                       <div class="col-sm-12 col-md-6 mt-2">
-                        <a href="https://placeholder.com"><img class="img-fluid" src="https://via.placeholder.com/350"></a>
+                        <a href="https://tevvels.github.io/Project_One_Deep_Vibrations/"><img id="pic" class="img-fluid" src="./DeepVibrations.png"></a>
+                        <p> Project One </p>
  
                       </div>
                       <div class="col-sm-12 col-md-6 mt-2">
-                        <a href="https://placeholder.com"><img class="img-fluid" src="https://via.placeholder.com/350"></a>
+                        <a href="https://dantejames94.github.io/funTimePlanner/"><img id="pic" class="img-fluid" src="https://i.etsystatic.com/15872687/r/il/6d8699/2129233744/il_570xN.2129233744_17yd.jpg"></a>
+                        <p> Day Planner </p>
 
                       </div>
                   </div>
                   <div class="row">
                       <div class="col-sm-12 col-md-6 mt-2">
-                        <a href="https://placeholder.com"><img class="img-fluid" src="https://via.placeholder.com/350"></a>
+                        <a href="https://dantejames94.github.io/horiseonRefactorHomework/"><img id="pic" class="img-fluid" src="./Screen Shot 2021-02-10 at 5.11.18 PM.png"></a>
+                        <p> Code Refactor </p>
  
                       </div>
                       <div class="col-sm-12 col-md-6 mt-2">
