--- a/portfolio.html
+++ b/portfolio.html
@@ -62,7 +62,8 @@
  
                       </div>
                       <div class="col-sm-12 col-md-6 mt-2">
-                        <a href="https://placeholder.com"><img class="img-fluid" src="https://via.placeholder.com/350"></a>
+                        <a href="hhttps://github.com/mrivera0014/vaxSeen"><img class="img-fluid" src="./Screen Shot 2021-03-16 at 5.13.09 PM.png"></a>
+                        <p> Vax-Seen </p>
 
                       </div>
                   </div>
